# scPanGC

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  uv.toml
docs/: usage.md
examples/: B_CD14_CD8_1000_downsample1.h5ad  quick_start.py
scPanGC/: __init__.py  cli.py  clustering.py  config.py  dea.py  gc_clustering.py  io.py  metacell.py  metacell_build.py  pipeline.py  validation.py
tests/: test_validation.py
