[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scPanGC"
version = "0.1.0"
description = "A computational framework for extracting Gene Clusters from large-scale single-cell autoimmune atlases."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Jolin"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "scanpy>=1.9.0",
    "anndata>=0.8.0",
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "metacells>=0.9.0",
    "scipy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/LittleJolin/scPanGC"

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[dependency-groups]
dev = [
    "pytest>=7",
    "ruff>=0.6",
]

[tool.uv]
package = true
default-groups = ["dev"]

[project.scripts]
scpangc = "scPanGC.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scPanGC*"]
